--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,6 +13,7 @@
   //BLUES
   $light-blue: #0A96CC;
   $base-blue: #548699;
+  $fb-blue: #3b5998;
 
   //WHITE
   $base-white: #FFFFFF;
@@ -23,3 +24,7 @@
 
   //FONT SIZES
   
+
+
+  //BORDERS
+  $border-base-blue: 1px solid $base-blue;
