--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,5 +7,10 @@
 @import "skeleton";
 @import "variables";
 @import "buttons";
+@import "base";
 
+@import "navbar";
+@import "navfooter";
 @import "homepage";
+@import "createfr1";
+@import "signup";
