--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1202,255 +1202,363 @@ input[type="checkbox"] {
   text-decoration: none;
 }
 
-/* line 38, ../sass/_buttons.scss */
+/* line 39, ../sass/_buttons.scss */
 .button-blue {
   background-color: #548699;
   color: #FFFFFF;
 }
-/* line 42, ../sass/_buttons.scss */
+/* line 43, ../sass/_buttons.scss */
 .button-blue:hover {
   background-color: #4b7889;
   color: #FFFFFF;
 }
 
-/* line 38, ../sass/_buttons.scss */
+/* line 39, ../sass/_buttons.scss */
 .button-red {
   background-color: #CC0A32;
   color: #FFFFFF;
 }
-/* line 42, ../sass/_buttons.scss */
+/* line 43, ../sass/_buttons.scss */
 .button-red:hover {
   background-color: #b7092d;
   color: #FFFFFF;
 }
 
-/* line 52, ../sass/_buttons.scss */
+/* line 39, ../sass/_buttons.scss */
+.button-fb {
+  background-color: #3b5998;
+  color: #FFFFFF;
+}
+/* line 43, ../sass/_buttons.scss */
+.button-fb:hover {
+  background-color: #355088;
+  color: #FFFFFF;
+}
+
+/* line 53, ../sass/_buttons.scss */
 .button-small {
   padding: 8px 10px !important;
   margin: 1em;
 }
 
-/* line 53, ../sass/_buttons.scss */
+/* line 54, ../sass/_buttons.scss */
 .button-nav {
   padding: 12px 18px !important;
   margin: 1em;
 }
 
-/* line 54, ../sass/_buttons.scss */
+/* line 55, ../sass/_buttons.scss */
 .button-large {
   font-size: 18px;
   margin: 1em;
   padding: 15px 40px !important;
 }
 
-/* line 55, ../sass/_buttons.scss */
+/* line 56, ../sass/_buttons.scss */
 .button-long {
   width: 100%;
 }
 
-/* line 56, ../sass/_buttons.scss */
+/* line 57, ../sass/_buttons.scss */
 .button-box {
-  width: 25%;
+  width: 100%;
 }
 
-/* line 61, ../sass/_buttons.scss */
+/* line 62, ../sass/_buttons.scss */
 .button-center {
   text-align: center;
 }
 
-/* line 62, ../sass/_buttons.scss */
+/* line 63, ../sass/_buttons.scss */
 .button-left {
   text-align: left;
 }
 
-/* line 63, ../sass/_buttons.scss */
+/* line 64, ../sass/_buttons.scss */
 .button-right {
   text-align: right;
 }
 
-/* line 2, ../sass/_homepage.scss */
+/* line 1, ../sass/_base.scss */
 body {
   font-family: "Raleway";
 }
 
-/* line 6, ../sass/_homepage.scss */
+/* line 5, ../sass/_base.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway";
 }
 
-/* line 8, ../sass/_homepage.scss */
+/* line 7, ../sass/_base.scss */
 a {
   text-decoration: none;
 }
 
-/* line 14, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .left-nav {
+/* line 10, ../sass/_base.scss */
+.divider {
+  border-bottom: 1px solid #548699;
+  border-top: solid 1px transparent;
+  height: 1px;
+  width: 100%;
+}
+
+/* line 1, ../sass/_navbar.scss */
+.main-nav-header {
+  padding: 10px 0 0 0;
+  margin-bottom: 0;
+}
+/* line 5, ../sass/_navbar.scss */
+.main-nav-header .left-nav {
   float: left;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
-/* line 17, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .left-nav li {
-  display: inline;
+/* line 10, ../sass/_navbar.scss */
+.main-nav-header .left-nav li {
+  display: inline-block;
   margin-top: 0;
+  margin-bottom: 0;
   padding: 0 1em 0 1em;
+  vertical-align: middle;
 }
-/* line 23, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .left-nav a {
+/* line 18, ../sass/_navbar.scss */
+.main-nav-header .left-nav a {
   color: #CC0A32;
   text-decoration: none;
 }
-/* line 30, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .right-nav {
+/* line 25, ../sass/_navbar.scss */
+.main-nav-header .right-nav {
   float: right;
+  margin-bottom: 0;
 }
-/* line 33, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .right-nav li {
+/* line 30, ../sass/_navbar.scss */
+.main-nav-header .right-nav li {
   display: inline;
+  vertical-align: middle;
 }
-/* line 36, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .right-nav li a {
+/* line 34, ../sass/_navbar.scss */
+.main-nav-header .right-nav li a {
+  color: #CC0A32;
   text-decoration: none;
 }
-/* line 43, ../sass/_homepage.scss */
-.raise-good-homepage .main-nav-header .right-nav .right-link {
+/* line 41, ../sass/_navbar.scss */
+.main-nav-header .right-nav .right-link {
   color: #CC0A32;
 }
-/* line 49, ../sass/_homepage.scss */
+
+/* line 3, ../sass/_navfooter.scss */
+.nav-footer {
+  background-color: #d7d7d7;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* line 10, ../sass/_navfooter.scss */
+.nav-footer .row {
+  margin-bottom: 0;
+  padding-top: 1em;
+}
+/* line 14, ../sass/_navfooter.scss */
+.nav-footer .footer-nav {
+  padding-bottom: 1em;
+}
+/* line 17, ../sass/_navfooter.scss */
+.nav-footer li {
+  display: inline;
+  padding: 0 2em;
+}
+/* line 22, ../sass/_navfooter.scss */
+.nav-footer a {
+  color: #548699;
+  padding: 0.5em 1.5em;
+}
+
+/* line 4, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image {
   background: url(../images/raisegoodcover.png) no-repeat top center;
   background-size: cover;
   width: 100%;
   min-height: 500px;
+  margin-top: 0;
 }
-/* line 55, ../sass/_homepage.scss */
+/* line 11, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image .main-header {
   padding-top: 230px;
   text-align: center;
 }
-/* line 61, ../sass/_homepage.scss */
+/* line 17, ../sass/_homepage.scss */
 .raise-good-homepage .main-header-image .main-header .header-block-background h1 {
   background-color: rgba(204, 10, 50, 0.7);
   color: #FFFFFF;
   padding: 0.2em 0.8em;
 }
-/* line 70, ../sass/_homepage.scss */
+/* line 26, ../sass/_homepage.scss */
 .raise-good-homepage .features {
   text-align: center;
 }
-/* line 73, ../sass/_homepage.scss */
+/* line 29, ../sass/_homepage.scss */
 .raise-good-homepage .features h3 {
   color: #548699;
   padding-top: 50px;
 }
-/* line 77, ../sass/_homepage.scss */
+/* line 33, ../sass/_homepage.scss */
 .raise-good-homepage .features img {
   padding-top: 1em;
   padding-bottom: 0;
 }
-/* line 82, ../sass/_homepage.scss */
+/* line 38, ../sass/_homepage.scss */
 .raise-good-homepage .features .nav-link {
   font-size: 18px;
   text-decoration: none;
 }
-/* line 88, ../sass/_homepage.scss */
+/* line 44, ../sass/_homepage.scss */
 .raise-good-homepage .searchline {
   text-align: center;
   padding-bottom: 1em;
 }
-/* line 91, ../sass/_homepage.scss */
+/* line 47, ../sass/_homepage.scss */
 .raise-good-homepage .searchline h4 {
   color: #548699;
   padding-top: 1em;
 }
-/* line 95, ../sass/_homepage.scss */
+/* line 51, ../sass/_homepage.scss */
 .raise-good-homepage .searchline a {
   text-decoration: none;
 }
-/* line 100, ../sass/_homepage.scss */
+/* line 56, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works {
   background-color: #548699;
   text-align: center;
 }
-/* line 104, ../sass/_homepage.scss */
+/* line 60, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works h3, .raise-good-homepage .how-it-works h4, .raise-good-homepage .how-it-works p {
   color: #FFFFFF;
 }
-/* line 108, ../sass/_homepage.scss */
+/* line 64, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works h3 {
   padding: 1em 0 0.5em 0;
   font-weight: 600;
 }
-/* line 112, ../sass/_homepage.scss */
+/* line 68, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works h4 {
   padding-bottom: 0.25em;
   font-weight: 600;
 }
-/* line 117, ../sass/_homepage.scss */
+/* line 73, ../sass/_homepage.scss */
 .raise-good-homepage .how-it-works p {
   padding: 0 1em 1em 1em;
 }
-/* line 122, ../sass/_homepage.scss */
+/* line 78, ../sass/_homepage.scss */
 .raise-good-homepage .quote-red-bg {
   background-color: #CC0A32;
   min-height: 400px;
   padding-top: 1em;
   text-align: center;
 }
-/* line 130, ../sass/_homepage.scss */
+/* line 86, ../sass/_homepage.scss */
 .raise-good-homepage .scrolling-quote img {
   float: left;
   padding-bottom: 0;
 }
 
-/* line 138, ../sass/_homepage.scss */
+/* line 94, ../sass/_homepage.scss */
 .final-cta {
   text-align: center;
   min-height: 225px;
 }
-/* line 141, ../sass/_homepage.scss */
+/* line 97, ../sass/_homepage.scss */
 .final-cta h2 {
   color: #548699;
   padding-top: 1em;
 }
-/* line 145, ../sass/_homepage.scss */
+/* line 101, ../sass/_homepage.scss */
 .final-cta a {
   text-decoration: none;
 }
 
-/* line 150, ../sass/_homepage.scss */
+/* line 106, ../sass/_homepage.scss */
 .footer {
   background-color: #d7d7d7;
 }
-/* line 152, ../sass/_homepage.scss */
+/* line 108, ../sass/_homepage.scss */
 .footer .container {
   text-align: center;
 }
-/* line 154, ../sass/_homepage.scss */
+/* line 110, ../sass/_homepage.scss */
 .footer .container h3 {
   color: #548699;
   padding-top: 1em;
   padding-bottom: 0.5em;
   text-align: center;
 }
-/* line 160, ../sass/_homepage.scss */
+/* line 116, ../sass/_homepage.scss */
 .footer .container li {
   display: inline;
+  padding: 0 2em;
 }
-/* line 163, ../sass/_homepage.scss */
+/* line 120, ../sass/_homepage.scss */
 .footer .container a {
   text-decoration: none;
-  padding: 0 1em;
+  padding: 0 2em;
 }
-/* line 169, ../sass/_homepage.scss */
-.footer .line {
-  max-width: 150%;
-}
-/* line 173, ../sass/_homepage.scss */
+/* line 127, ../sass/_homepage.scss */
 .footer .nav-footer {
   text-align: center;
   font-size: 18px;
 }
-/* line 176, ../sass/_homepage.scss */
+/* line 130, ../sass/_homepage.scss */
+.footer .nav-footer .row {
+  margin-bottom: 0;
+}
+/* line 134, ../sass/_homepage.scss */
 .footer .nav-footer a {
   color: #548699;
   padding: 0.5em 1.5em;
+}
+
+/* line 2, ../sass/_signup.scss */
+body {
+  font-family: "Raleway";
+}
+
+/* line 6, ../sass/_signup.scss */
+a {
+  text-decoration: none;
+}
+
+/* line 10, ../sass/_signup.scss */
+.signup-page .right-nav {
+  margin-top: 1.5em;
+}
+/* line 15, ../sass/_signup.scss */
+.signup-page .signup-main-image {
+  background: url(../images/raisegoodcover.png) no-repeat top center;
+  background-size: cover;
+  width: 100%;
+  min-height: 500px;
+  margin-top: 0;
+}
+/* line 22, ../sass/_signup.scss */
+.signup-page .signup-main-image .sign-up {
+  position: center;
+  padding-top: 5em;
+}
+/* line 26, ../sass/_signup.scss */
+.signup-page .signup-main-image .sign-up .information {
+  background-color: rgba(204, 10, 50, 0.7);
+  color: #FFFFFF;
+  padding: 1em 1.5em;
+  border-radius: 5px;
+}
+/* line 32, ../sass/_signup.scss */
+.signup-page .signup-main-image .sign-up .information h3 {
+  text-align: center;
+  color: #FFFFFF;
+  padding: 0.25em 0 0.5em 0;
+}
+/* line 37, ../sass/_signup.scss */
+.signup-page .signup-main-image .sign-up .information input {
+  border-radius: 5px;
+  width: 100%;
 }
