--- a/sass/_signup.scss
+++ b/sass/_signup.scss
@@ -6,51 +6,42 @@ body {
 a {text-decoration: none;}
 
 .signup-page {
-  
-  .main-nav-header {
-    
-    .left-nav {
-      float: left;
-        
-        li{
-          display: inline;
-          margin-top: 0;
-          padding: 0 1em 0 1em;
-        }
-        
-        a{
-          color: $base-red;
-          text-decoration: none; 
-        }    
-    }
 
-    .right-nav {
-      a{
-        color: $base-red;
-        text-decoration: none;
-      }
-    }
+  .right-nav {
+    margin-top: 1.5em;
+      
   }
 
-  .signup-main {
+  .signup-main-image {
     background:url(../images/raisegoodcover.png) no-repeat top center;
     background-size:cover;
     width:100%;
     min-height:500px;
-    .container {
+    margin-top: 0;
+
+    .sign-up {
       position: center;
-    }
+      padding-top: 5em;
+    
+      .information {
+        background-color: rgba(204,10,50, 0.7);
+        color: #FFFFFF;
+        padding: 1em 1.5em;
+        border-radius: 5px;
+      
+        h3{
+          text-align: center;
+          color: $base-white;
+          padding: 0.25em 0 0.5em 0;
+        }
+        input {
+          border-radius: 5px;
+          width: 100%;
+        }
+      }
+    }       
   }
 
-  .nav-footer {
-    text-align: center;
-    font-size: 18px;
-    
-    a{
-      color: $base-blue;
-      padding: 0.5em 1.5em;
-    }
-  }
 }    
 
 
