--- a/sass/_signup.scss
+++ b/sass/_signup.scss
@@ -18,26 +18,36 @@ a {text-decoration: none;}
     width:100%;
     min-height:500px;
     margin-top: 0;
+    margin-bottom: 0;
 
     .sign-up {
       position: center;
       padding-top: 5em;
+
+      .header-block-background {
+        margin-bottom: 0
+      }
     
-      .information {
-        background-color: rgba(204,10,50, 0.7);
-        color: #FFFFFF;
-        padding: 1em 1.5em;
-        border-radius: 5px;
-      
-        h3{
-          text-align: center;
-          color: $base-white;
-          padding: 0.25em 0 0.5em 0;
-        }
-        input {
+        .information {
+          background-color:rgba(200, 60, 89, 1);
+
+          color: #FFFFFF;
+          padding: 0.5em 0.5em;
           border-radius: 5px;
-          width: 100%;
-        }
+        
+          h3{
+            text-align: center;
+            color: $base-white;
+            padding: 0.25em 0 0.25em 0;
+          }
+          input {
+            border-radius: 5px;
+            width: 100%;
+          }
+          a {
+            margin: 1em 0 1em 0;
+            text-align: center;
+          }
       }
     }       
   }
