--- a/sass/_createform.scss
+++ b/sass/_createform.scss
@@ -31,7 +31,7 @@
     text-align: left;
     font-size: 2.5em;
   }
-
+//CONFUSED WITH .NO-JS//
 .no-js .fs-form {
   padding: 0 0 6em 0;
 }
@@ -42,12 +42,12 @@
       margin: 0 auto;
       width: 70%;
     }
-
-.fs-form-full,
+//CONFUSED WITH .FS-MESSAGE-ERROR//
 .fs-message-error {
   max-width: 960px;
 }
 
+//DANG IT, THIS ONE TOO!//
 .fs-form-overview {
   padding: 2.5em 30% 6em;
   width: 100%;
