--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -16,6 +16,13 @@
 @import "dropdown";
 @import "homepage";
 @import "signup";
+@import "createform";
+@import "qtrotator";
+@import "demo";
+@import "normalize";
+
+
+
 
 
 
