--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -16,9 +16,9 @@
 @import "dropdown";
 @import "homepage";
 @import "signup";
-//@import "createform";
+@import "createform";
 @import "qtrotator";
-//@import "demo";
-//@import "normalize";
+@import "demo";
+@import "normalize";
 
 //PLUGIN STYLES 
